syntax = "proto2";

option java_multiple_files = true;
option java_outer_classname = "ProtoPointWrapper";

package org.openstreetmap.atlas.proto;

import "Tag.proto";

message ProtoPoint {
    optional int64 id = 1;
    optional int32 latitude = 2;
    optional int32 longitude = 3;

    repeated ProtoTag tags = 4;
}
